Fixed some javadoxs and test bugs; added new adapter for nullable dates, new connectors to test API and to retrieve User(s); updated exceptions;  replaced DefaultHttpClient with CloseableHttpClient; upgraded dependencies.